fix: spacing and status codes

--- a/packages/docsearch-css/src/modal.css
+++ b/packages/docsearch-css/src/modal.css
@@ -610,7 +610,6 @@ svg.DocSearch-Hit-Select-Icon {
 
 .DocSearch-NoResults--withAskAi {
   height: 60%;
-  gap: 0;
 }
 
 .DocSearch-StartScreen,
